--- a/outputs/FullModel.Rmd
+++ b/outputs/FullModel.Rmd
@@ -2,7 +2,9 @@
 title: "Full Model Docs"
 author: "Steph Locke"
 date: "16 February 2017"
-output: github_document
+output: 
+  html_document:
+    keep_md: TRUE
 ---
 
 ```{r setup, include=FALSE}
