attempting to add random forests, but not quite working yet

--- a/analysis/CandidateModels.Rmd
+++ b/analysis/CandidateModels.Rmd
@@ -42,6 +42,13 @@ boosted<-caret::train(survived~.,                                       data=tit
                     )
 ```
 
+## random forest
+```{r cforest , results='hide'}
+cforest<-caret::train(survived~.,                                       data=titanic_train_c,
+                    method="cforest"
+                    )
+```
+
 ```{r gbmprint}
 summary(boosted)
 caret::varImp(boosted)
