--- a/analysis/ModelsEvaluation.Rmd
+++ b/analysis/ModelsEvaluation.Rmd
@@ -13,6 +13,7 @@ trainres<-data.frame(
   simple=predict(simple,titanic_train_c),
   net=predict(net,titanic_train_c),
   boosted=predict(boosted,titanic_train_c),
+  cforest=predict(cforest,titanic_train_c),
   allinval=predict(allin,titanic_train_c,type = "prob"),
   simpleval=predict(simple,titanic_train_c,type = "prob"),
   netval=predict(net,titanic_train_c,type = "prob"),
@@ -27,6 +28,7 @@ testres<-data.frame(
   simple=predict(simple,titanic_test_c_na),
   net=predict(net,titanic_test_c_na),
   boosted=predict(boosted,titanic_test_c_na),
+  cforest=predict(cforest,titanic_test_c_na),
   allinval=predict(allin,titanic_test_c_na,type = "prob"),
   simpleval=predict(simple,titanic_test_c_na,type = "prob"),
   netval=predict(net,titanic_test_c_na,type = "prob"),
